# unvs/docs/swagger.yaml
@@ -52,6 +52,67 @@ info:
   title: Go API Example
   version: "1.0"
 paths:
+  /get/{tenant}/{module}/{action}/{optionalPath}:
+    get:
+      consumes:
+      - application/json
+      description: API này cho phép gọi các tính năng cụ thể cho từng tenant và ngôn
+        ngữ, với khả năng mở rộng đường dẫn.
+      parameters:
+      - description: The specific tenant to invoke (e.g., default, name, ...)
+        in: path
+        name: tenant
+        required: true
+        type: string
+      - description: The module name (e.g., users, products, auth)
+        in: path
+        name: module
+        required: true
+        type: string
+      - description: The action name (e.g., list, create, detail, login)
+        in: path
+        name: action
+        required: true
+        type: string
+      - description: Optional additional path segments (e.g., 'sub/item/id'). This
+          parameter captures all remaining path segments.
+        in: path
+        name: optionalPath
+        type: string
+      - description: The specific ID of the feature. Each UI at frontend will have
+          a unique feature ID and must be approved by the backend team.
+        in: query
+        name: feature
+        required: true
+        type: string
+      - description: The specific language to invoke (e.g., en, vi, pt, ...)
+        in: query
+        name: lan
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successful response with requested parameters
+          schema:
+            $ref: '#/definitions/internal_app_handler_callers.CallerResponse'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Lấy thông tin dựa trên tenant, module, action, feature, ngôn ngữ và
+        các phân đoạn đường dẫn bổ sung.
+      tags:
+      - caller
   /hz:
     get:
       consumes:
